--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,16 @@ dist.jlink.output=${dist.jlink.dir}/HOTEL_MANAGEMENT
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\Shivani\\Desktop\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar-1=Jar Files\\mysql-connector-java-8.0.23.jar
+file.reference.ojdbc14.jar=Jar Files\\ojdbc14.jar
 file.reference.rs2xml.jar=C:\\Users\\Shivani\\Downloads\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.23.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar-1}:\
+    ${file.reference.ojdbc14.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
